# Unlearning-Comparator

./: .gitignore  Adding_New_Unlearning_Method_Guide.md  CITATION.cff  README.md  package-lock.json  package.json  pnpm-lock.yaml  visualize_distributions.py
backend/: .gitattributes  .gitignore  README.md  class_6_distribution.json  index.html  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/config/: __init__.py  settings.py
backend/app/models/: __init__.py  face_resnet.py  neural_network.py  resnet.py  status.py
backend/app/routers/: __init__.py  data.py  inference.py  models.py  train.py  trained_models.py  unlearn.py
backend/app/services/: __init__.py  inference.py  train.py  training.py  unlearn_FT.py  unlearn_GA.py  unlearn_GA_FT.py  unlearn_GA_SL_FT.py  unlearn_GA_SL_FT_V2.py  unlearn_RL.py  unlearn_SCRUB.py  unlearn_SalUn.py  unlearn_custom.py  unlearn_face_FT.py  unlearn_face_GA.py  unlearn_face_GA_FT.py  unlearn_face_GA_SL_FT.py  unlearn_face_RL.py  unlearn_face_SCRUB.py  unlearn_face_SalUn.py  unlearn_face_custom.py  unlearn_face_retrain.py  unlearn_retrain.py  visualization.py
backend/app/threads/: __init__.py  train_thread.py  unlearn_FT_thread.py  unlearn_GA_FT_thread.py  unlearn_GA_SL_FT_V2_thread.py  unlearn_GA_SL_FT_thread.py  unlearn_GA_thread.py  unlearn_RL_thread.py  unlearn_SCRUB_thread.py  unlearn_SalUn_thread.py  unlearn_custom_thread.py  unlearn_face_FT_thread.py  unlearn_face_GA_FT_thread.py  unlearn_face_GA_SL_FT_thread.py  unlearn_face_GA_thread.py  unlearn_face_RL_thread.py  unlearn_face_SCRUB_thread.py  unlearn_face_SalUn_thread.py  unlearn_face_custom_thread.py  unlearn_face_retrain_thread.py  unlearn_retrain_thread.py
backend/app/utils/: __init__.py  attack.py  attack_full_dataset.py  attack_optimized_ps.py  data_loader.py  epoch_plotting.py  evaluation.py  helpers.py  layer_utils.py  salun_mia.py  thread_base.py  thread_operations.py  visualization.py  visualize_distributions.py
backend/data/0/: 0000.json  3736.json  a000.json  f48d.json
backend/data/1/: 0001.json  (+3 more)
(+685 files in other folders)
